# koules

./: CMakeLists.txt  client.h  cmap-x11.c  framebuffer.h  koules.c  koules.sndsrv.freebsd.c  koules.sndsrv.hp.c  koules.sndsrv.sgi.c  koules.sndsrv.sun.c  linux_pcsp.h  menu.c  mygetopt.c  net.h  rcfiles.c  rsound.c  server.c  server.h  sock.c  sock.h
historic/: koule.c  soundIt.c  soundIt.h
os2dive/: OS2changes.h  init.c  input.c  input.h  interface.h  newbutton.c  pm_main.c  pm_main.h
os2dive/include/: vga.h  vgagl.h
sdl/: SDL_prims.c  SFont.c  init.c  input.h  interface.h
src/: client.c  cmap.c  cmap.h  font.c  font.h  framebuffer.c  gameplan.c  intro.c  joystick.h  koules.h  koules.sndsrv.linux.c  mygetopt.h  nas_sound.c  objectsio.c  sound.c  sound.h  soundos2.c  text.h
src/sdl/: SDL_prims.h  SFont.h  init.c
svgalib/: init.c  input.h  interface.h
util/: usleep.c
